--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "quickapps-plugin/locale",
+	"name": "quickapps-plugins/locale",
 	"description": "Adds language handling functionality and enables the translation of the user interface to languages other than English.",
 	"type": "quickapps-plugin",
 	"keywords": ["framework", "cms", "cmf", "quickapps", "plugin"],
